--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <div id="datos"></div>
         <div id="bloque"></div>
         <script src="main.js" type="text/javascript"></script>
+        <h4>Esto es javascript</h4>
     </body>
 </html>
